Feat :: Backgroun body

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Alura Plus</title>
+
+	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
-	
+	<h1>Com o Combo+, você aproveita a Alura</h1>
 </body>
 </html>
