--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
-	<h1>Com o Combo+, você aproveita a Alura</h1>
+	<section class="container principal">
+		<div class="">
+			<h1>Com o Combo+, você aproveita a Alura por um preço unico.</h1>
+			<img src="Combo.png" alt="Combo+">	
+			<a href="" class="container__botao">Assine por 12x de R$ 120,00</a>
+			<a href="" class="botao_secundario">Assinar somente o Alura+</a>
+			<p>*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+		</div>
+	</section>
+
 </body>
 </html>
