--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Alura Plus</title>
-
-	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<section class="container principal">
 		<div class="">
-			<h1>Com o Combo+, você aproveita a Alura por um preço unico.</h1>
+			<h1 class="titulo">Com o Combo+, você aproveita a Alura por um preço unico.</h1>
 			<img src="Combo.png" alt="Combo+">	
 			<a href="" class="container__botao">Assine por 12x de R$ 120,00</a>
 			<a href="" class="botao_secundario">Assinar somente o Alura+</a>
-			<p>*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+			<p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
 		</div>
 	</section>
-
 </body>
 </html>
