--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 	<section class="container principal">
-		<div class="">
-			<h1 class="titulo">Com o Combo+, você aproveita a Alura por um preço unico.</h1>
-			<img src="Combo.png" alt="Combo+">	
+		<div class="caixa">
+			<h1 class="titulo">Com o Combo+, você aproveitar a Alura+ e o Alura Lingua por um preço unico.</h1>
+			<img src="Combo.png" alt="Combo+" class="imagem">	
 			<a href="" class="container__botao">Assine por 12x de R$ 120,00</a>
 			<a href="" class="botao_secundario">Assinar somente o Alura+</a>
 			<p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
