--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
 			<p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
 		</div>
 	</section>
+
+	<section class="container secundario">
+		<img src="Plataformas.png" alt="Plataformas" class="secundario_imagem">
+		<div class="secundario">
+			<h2 class="descricao_titulo">Assista do seu jeito</h2>
+			<p class="descricao_texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+		</div>	
+
+	</section>
 </body>
 </html>
